--- a/vacation-suggeter.html
+++ b/vacation-suggeter.html
@@ -12,50 +12,63 @@
   </head>
   <body>
     <div class="container">
-
-    <div class="survey">
-    <h1>Vacation Inspiration</h1>
-    <h3>Where should you travel to next?</h3>
-    <p>Please answer a few questions about yourself and your preferences:</p>
-    <form id ="survey">
+    <div class="jumbotron">
+      <h1 class="display-4">Vacation Inspiration</h1>
+      <h3 class="lead">Where should you travel to next?</h3>
+      <p>Please answer a few questions about yourself and your preferences:</p>
+  </div>
+    <form id="survey">
+      <div class="form-group">
       <label for="name">What is your name?</label>
       <input class="form-control" id="name" type="text">
+    </div>
+    <div class="form-group">
       <label for="season">What time of year will you be travelling?</label>
       <select class="form-control" id="season">
-        <option value="spring">Spring</option>
-        <option value="summer">Summer</option>
-        <option value="Fall">Fall</option>
-        <option value="Winter">Winter</option>
+        <option value="1">Spring</option>
+        <option value="2">Summer</option>
+        <option value="3">Fall</option>
+        <option value="4">Winter</option>
     </select>
+  </div>
+  <div class="form-group">
     <label for="purpose">Why are you taking this trip?</label>
     <select class="form-control" id="purpose">
       <option value="relax">I need to relax. I work hard.</option>
       <option value="explore">I want to explore! I am curious about the world.</option>
-  </select>
+    </select>
+  </div>
+  <div class="form-group">
     <label for="independance">How do you like to explore a new place?</label>
     <select class="form-control" id="independance">
       <option value="guided">I like guided tours and pre-arranged transportation.</option>
       <option value="solo">I like to explore on my own.</option>
     </select>
+  </div>
+  <div class="form-group">
     <label for="activity">How active do you like to be while on vacation?</label>
     <select class="form-control" id="activity">
       <option value="lazy">I like to sit on the beach and drink.</option>
       <option value="busy">I am up at dawn with a day full of tours booked!</option>
       <option value="balanced">I'll go see the sights after a late breakfast.</option>
     </select>
-    <button type="submit" class="btn">Where to next?</button>
   </div>
+    <button type="submit" class="btn">Where should I go?</button>
+
 
 
     <div id="Ecuador">
       <h1>Ecuador!</h1>
-      <img src="images/travelEcuador7.jpg" alt="a picture of ecuador">
+      <img class="mr-3" src="images/travelEcuador7.jpg" alt="a picture of ecuador">
       <p>You should go to Ecauador and the Galapagos Islands!</p>
     </div>
+
     <div id="Caribbean">
       <img src="images/caribbean.jpg" alt="relaxing beach">
       <p>You should go to the caribbean and relax in the sun!</p>
     </div>
+
+
     <div id="Ireland">
       <img src="images/ireland.jpg" alt="a picture of ireland">
       <p>You should go to Ireland!</p>
