add more javascript to give varied results based on survey results.

--- a/vacation-suggeter.html
+++ b/vacation-suggeter.html
@@ -25,17 +25,17 @@
     <div class="form-group">
       <label for="season">What time of year will you be travelling?</label>
       <select class="form-control" id="season">
-        <option value="1">Spring</option>
-        <option value="2">Summer</option>
-        <option value="3">Fall</option>
+        <option value="100">Spring</option>
+        <option value="100">Summer</option>
+        <option value="4">Fall</option>
         <option value="4">Winter</option>
     </select>
   </div>
   <div class="form-group">
     <label for="purpose">Why are you taking this trip?</label>
     <select class="form-control" id="purpose">
-      <option value="relax">I need to relax. I work hard.</option>
-      <option value="explore">I want to explore! I am curious about the world.</option>
+      <option value="1">I need to relax. I work hard.</option>
+      <option value="2">I want to explore! I am curious about the world.</option>
     </select>
   </div>
   <div class="form-group">
@@ -48,28 +48,30 @@
   <div class="form-group">
     <label for="activity">How active do you like to be while on vacation?</label>
     <select class="form-control" id="activity">
-      <option value="lazy">I like to sit on the beach and drink.</option>
-      <option value="busy">I am up at dawn with a day full of tours booked!</option>
-      <option value="balanced">I'll go see the sights after a late breakfast.</option>
+      <option value="10">I like to sit on the beach and drink.</option>
+      <option value="20">I am up at dawn with a day full of tours booked!</option>
+      <option value="30">I'll go see the sights after a late breakfast.</option>
     </select>
   </div>
     <button type="submit" class="btn">Where should I go?</button>
 
 
 
-    <div id="Ecuador">
+    <div id="ecuador">
       <h1>Ecuador!</h1>
       <img class="mr-3" src="images/travelEcuador7.jpg" alt="a picture of ecuador">
       <p>You should go to Ecauador and the Galapagos Islands!</p>
     </div>
 
-    <div id="Caribbean">
+    <div id="caribbean">
+      <h1>The Caribbean!</h1>
       <img src="images/caribbean.jpg" alt="relaxing beach">
       <p>You should go to the caribbean and relax in the sun!</p>
     </div>
 
 
-    <div id="Ireland">
+    <div id="ireland">
+      <h1>Ireland!</h1>
       <img src="images/ireland.jpg" alt="a picture of ireland">
       <p>You should go to Ireland!</p>
     </div>
