add personalized message to result return.

--- a/vacation-suggeter.html
+++ b/vacation-suggeter.html
@@ -55,24 +55,26 @@
   </div>
     <button type="submit" class="btn">Where should I go?</button>
 
-
+   <div class="message">
+     <p>Get ready for a great vacation <span class="name"></span>, here is our suggestion:</p>  
+  </div>
 
     <div id="ecuador">
-      <h1>Ecuador!</h1>
       <img class="mr-3" src="images/travelEcuador7.jpg" alt="a picture of ecuador">
+      <h1>Ecuador!</h1>
       <p>You should go to Ecauador and the Galapagos Islands!</p>
     </div>
 
     <div id="caribbean">
       <h1>The Caribbean!</h1>
-      <img src="images/caribbean.jpg" alt="relaxing beach">
+      <img class="mr-3" src="images/caribbean.jpg" alt="relaxing beach">
       <p>You should go to the caribbean and relax in the sun!</p>
     </div>
 
 
     <div id="ireland">
       <h1>Ireland!</h1>
-      <img src="images/ireland.jpg" alt="a picture of ireland">
+      <img class="mr-3" src="images/ireland.jpg" alt="a picture of ireland">
       <p>You should go to Ireland!</p>
     </div>
 
