Add additional custom css to improve appearance.

--- a/vacation-suggeter.html
+++ b/vacation-suggeter.html
@@ -56,7 +56,7 @@
     <button type="submit" class="btn">Where should I go?</button>
 
    <div class="message">
-     <p>Get ready for a great vacation <span class="name"></span>, here is our suggestion:</p>  
+     <p>Get ready for a great vacation <span class="name"></span>!, here is our suggestion:</p>  
   </div>
 
     <div id="ecuador">
