--- a/vacation-suggeter.html
+++ b/vacation-suggeter.html
@@ -19,63 +19,64 @@
   </div>
     <form id="survey">
       <div class="form-group">
-      <label for="name">What is your name?</label>
-      <input class="form-control" id="name" type="text">
+        <label for="name">What is your name?</label>
+        <input class="form-control" id="name" type="text">
     </div>
     <div class="form-group">
       <label for="season">What time of year will you be travelling?</label>
-      <select class="form-control" id="season">
-        <option value="100">Spring</option>
-        <option value="100">Summer</option>
-        <option value="4">Fall</option>
-        <option value="4">Winter</option>
-    </select>
+        <select class="form-control" id="season">
+          <option value="100">Spring</option>
+          <option value="100">Summer</option>
+          <option value="4">Fall</option>
+          <option value="4">Winter</option>
+      </select>
   </div>
   <div class="form-group">
     <label for="purpose">Why are you taking this trip?</label>
-    <select class="form-control" id="purpose">
-      <option value="1">I need to relax. I work hard.</option>
-      <option value="2">I want to explore! I am curious about the world.</option>
+      <select class="form-control" id="purpose">
+        <option value="1">I need to relax. I work hard.</option>
+        <option value="2">I want to explore! I am curious about the world.</option>
     </select>
   </div>
   <div class="form-group">
     <label for="independance">How do you like to explore a new place?</label>
-    <select class="form-control" id="independance">
-      <option value="guided">I like guided tours and pre-arranged transportation.</option>
-      <option value="solo">I like to explore on my own.</option>
-    </select>
+      <select class="form-control" id="independance">
+        <option value="guided">I like guided tours and pre-arranged transportation.</option>
+        <option value="solo">I like to explore on my own.</option>
+     </select>
   </div>
   <div class="form-group">
     <label for="activity">How active do you like to be while on vacation?</label>
-    <select class="form-control" id="activity">
-      <option value="10">I like to sit on the beach and drink.</option>
-      <option value="20">I am up at dawn with a day full of tours booked!</option>
-      <option value="30">I'll go see the sights after a late breakfast.</option>
+      <select class="form-control" id="activity">
+        <option value="10">I like to sit on the beach and drink.</option>
+        <option value="20">I am up at dawn with a day full of tours booked!</option>
+        <option value="30">I'll go see the sights after a late breakfast.</option>
     </select>
   </div>
     <button type="submit" class="btn">Where should I go?</button>
+  </form>
 
    <div class="message">
-     <p>Get ready for a great vacation <span class="name"></span>!, here is our suggestion:</p>  
+     <p>Get ready for a great vacation <span class="name"></span>!, here is our suggestion:</p>
   </div>
 
     <div id="ecuador">
       <img class="mr-3" src="images/travelEcuador7.jpg" alt="a picture of ecuador">
       <h1>Ecuador!</h1>
-      <p>You should go to Ecauador and the Galapagos Islands!</p>
+        <p>You should go to Ecauador and the Galapagos Islands!</p>
     </div>
 
     <div id="caribbean">
       <h1>The Caribbean!</h1>
-      <img class="mr-3" src="images/caribbean.jpg" alt="relaxing beach">
-      <p>You should go to the caribbean and relax in the sun!</p>
+        <img class="mr-3" src="images/caribbean.jpg" alt="relaxing beach">
+        <p>You should go to the caribbean and relax in the sun!</p>
     </div>
 
 
     <div id="ireland">
       <h1>Ireland!</h1>
-      <img class="mr-3" src="images/ireland.jpg" alt="a picture of ireland">
-      <p>You should go to Ireland!</p>
+        <img class="mr-3" src="images/ireland.jpg" alt="a picture of ireland">
+        <p>You should go to Ireland!</p>
     </div>
 
 
